tests/fixtures/valid/inline_dag_call_qualified/src/lib/lib.gcl
// Library DAG that the main file invokes via a qualified inline call.
pub dag doubler {
    param v: Length;
    pub node out: Length = @v * 2.0;
}
